新增解密/对象工具/流